[gd_scene load_steps=3 format=3 uid="uid://du6t1otggkh6f"]

[ext_resource type="Script" uid="uid://dd8woaa117on0" path="res://scene/game/skin_shop/skin_card.gd" id="1_8f634"]
[ext_resource type="Texture2D" uid="uid://db5l7u4ydbtfv" path="res://aaasets/players/ice_player/ice_player_fly5.png" id="2_2uufr"]

[node name="SkinCard" type="Button"]
custom_minimum_size = Vector2(200, 340)
offset_right = 8.0
offset_bottom = 66.0
script = ExtResource("1_8f634")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer/Control"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -90.0
offset_right = 90.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 6
texture = ExtResource("2_2uufr")

[node name="Block" type="TextureRect" parent="MarginContainer/VBoxContainer/Control"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SkinName" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 36
text = "Ice"

[node name="Price" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 24
text = "700"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 36
text = "Buy"

[connection signal="pressed" from="." to="." method="_on_skin_card_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
